@@ -1,3 +1,7 @@
+2004-04-03  Kevin Turner  <kevin@freegeek.org>
+
+	* bin/testscript.py: 1.2 s/fgdiag.lib.testing/fgdiag.lib.test/
+
 2004-03-25  Kevin Turner  <kevin@freegeek.org>
 
 	* fgdiag/modem/pcimodem.py: 1.1 use new path for pyutil.
